DLP_PL12/src/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  $$1 :

   6  main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}'

   7  variable_definition : variables ':' type ';'

   8  variables : ID
   9            | variables ',' ID

  10  $$2 :

  11  function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'

  12  parameters :
  13             | _parameters

  14  _parameters : parameter
  15              | _parameters ',' parameter

  16  parameter : ID ':' simple_type

  17  return_type : simple_type
  18              | VOID

  19  function_body :
  20                | variable_definitions statements
  21                | variable_definitions
  22                | statements

  23  variable_definitions : variable_definition
  24                       | variable_definitions variable_definition

  25  statements : statement
  26             | statements statement

  27  statement : statement_without_semicolon ';'
  28            | while
  29            | if

  30  statement_without_semicolon : function_call_as_expression
  31                              | return
  32                              | assignment
  33                              | read
  34                              | write

  35  type : simple_type
  36       | array
  37       | struct

  38  simple_type : INT
  39              | DOUBLE
  40              | CHAR

  41  array : '[' INT_CONSTANT ']' type

  42  struct : STRUCT '{' struct_body '}'

  43  struct_body : variable_definition
  44              | struct_body variable_definition

  45  assignment : expression '=' expression

  46  read : INPUT expressions

  47  $$3 :

  48  write : PRINT $$3 expressions

  49  expressions : expression
  50              | expressions ',' expression

  51  while : WHILE expression ':' '{' statements '}'
  52        | WHILE expression ':' statement

  53  if : IF expression ':' '{' statements '}'
  54     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  55     | IF expression ':' '{' statements '}' ELSE statement
  56     | IF expression ':' statement
  57     | IF expression ':' statement ELSE '{' statements '}'
  58     | IF expression ':' statement ELSE statement

  59  $$4 :

  60  return : RETURN $$4 expression

  61  expression : expression AND expression
  62             | expression OR expression
  63             | expression '>' expression
  64             | expression GREATER_OR_EQUAL expression
  65             | expression '<' expression
  66             | expression LESS_OR_EQUAL expression
  67             | expression DISTINCT expression
  68             | expression EQUALS expression
  69             | expression '+' expression
  70             | expression '-' expression
  71             | expression '*' expression
  72             | expression '/' expression
  73             | expression '%' expression
  74             | '!' expression
  75             | '-' expression
  76             | '(' simple_type ')' expression
  77             | expression '.' ID
  78             | expression '[' expression ']'
  79             | '(' expression ')'
  80             | function_call_as_expression
  81             | INT_CONSTANT
  82             | REAL_CONSTANT
  83             | CHAR_CONSTANT
  84             | ID

  85  function_call_as_expression : ID '(' parameters_in_function_call ')'

  86  parameters_in_function_call :
  87                              | expressions

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . $$1 MAIN '(' ')' ':' VOID '{' function_body '}'  (6)
	function_definition : DEF . $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)
	$$1 : .  (5)
	$$2 : .  (10)

	ID  reduce 10
	MAIN  reduce 5

	$$1  goto 9
	$$2  goto 10


state 4
	variables : ID .  (8)

	.  reduce 8


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (7)
	variables : variables . ',' ID  (9)

	':'  shift 11
	','  shift 12
	.  error


state 9
	main : DEF $$1 . MAIN '(' ')' ':' VOID '{' function_body '}'  (6)

	MAIN  shift 13
	.  error


state 10
	function_definition : DEF $$2 . ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	ID  shift 14
	.  error


state 11
	variable_definition : variables ':' . type ';'  (7)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 20
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 12
	variables : variables ',' . ID  (9)

	ID  shift 24
	.  error


state 13
	main : DEF $$1 MAIN . '(' ')' ':' VOID '{' function_body '}'  (6)

	'('  shift 25
	.  error


state 14
	function_definition : DEF $$2 ID . '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	'('  shift 26
	.  error


state 15
	simple_type : INT .  (38)

	.  reduce 38


state 16
	simple_type : DOUBLE .  (39)

	.  reduce 39


state 17
	simple_type : CHAR .  (40)

	.  reduce 40


state 18
	struct : STRUCT . '{' struct_body '}'  (42)

	'{'  shift 27
	.  error


state 19
	array : '[' . INT_CONSTANT ']' type  (41)

	INT_CONSTANT  shift 28
	.  error


state 20
	variable_definition : variables ':' type . ';'  (7)

	';'  shift 29
	.  error


state 21
	type : simple_type .  (35)

	.  reduce 35


state 22
	type : array .  (36)

	.  reduce 36


state 23
	type : struct .  (37)

	.  reduce 37


state 24
	variables : variables ',' ID .  (9)

	.  reduce 9


state 25
	main : DEF $$1 MAIN '(' . ')' ':' VOID '{' function_body '}'  (6)

	')'  shift 30
	.  error


state 26
	function_definition : DEF $$2 ID '(' . parameters ')' ':' return_type '{' function_body '}'  (11)
	parameters : .  (12)

	ID  shift 31
	')'  reduce 12

	parameters  goto 32
	_parameters  goto 33
	parameter  goto 34


state 27
	struct : STRUCT '{' . struct_body '}'  (42)

	ID  shift 4
	.  error

	variable_definition  goto 35
	variables  goto 8
	struct_body  goto 36


state 28
	array : '[' INT_CONSTANT . ']' type  (41)

	']'  shift 37
	.  error


state 29
	variable_definition : variables ':' type ';' .  (7)

	.  reduce 7


state 30
	main : DEF $$1 MAIN '(' ')' . ':' VOID '{' function_body '}'  (6)

	':'  shift 38
	.  error


state 31
	parameter : ID . ':' simple_type  (16)

	':'  shift 39
	.  error


state 32
	function_definition : DEF $$2 ID '(' parameters . ')' ':' return_type '{' function_body '}'  (11)

	')'  shift 40
	.  error


state 33
	parameters : _parameters .  (13)
	_parameters : _parameters . ',' parameter  (15)

	','  shift 41
	')'  reduce 13


state 34
	_parameters : parameter .  (14)

	.  reduce 14


state 35
	struct_body : variable_definition .  (43)

	.  reduce 43


state 36
	struct : STRUCT '{' struct_body . '}'  (42)
	struct_body : struct_body . variable_definition  (44)

	ID  shift 4
	'}'  shift 42
	.  error

	variable_definition  goto 43
	variables  goto 8


state 37
	array : '[' INT_CONSTANT ']' . type  (41)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 44
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 38
	main : DEF $$1 MAIN '(' ')' ':' . VOID '{' function_body '}'  (6)

	VOID  shift 45
	.  error


state 39
	parameter : ID ':' . simple_type  (16)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	.  error

	simple_type  goto 46


state 40
	function_definition : DEF $$2 ID '(' parameters ')' . ':' return_type '{' function_body '}'  (11)

	':'  shift 47
	.  error


state 41
	_parameters : _parameters ',' . parameter  (15)

	ID  shift 31
	.  error

	parameter  goto 48


state 42
	struct : STRUCT '{' struct_body '}' .  (42)

	.  reduce 42


state 43
	struct_body : struct_body variable_definition .  (44)

	.  reduce 44


state 44
	array : '[' INT_CONSTANT ']' type .  (41)

	.  reduce 41


state 45
	main : DEF $$1 MAIN '(' ')' ':' VOID . '{' function_body '}'  (6)

	'{'  shift 49
	.  error


state 46
	parameter : ID ':' simple_type .  (16)

	.  reduce 16


state 47
	function_definition : DEF $$2 ID '(' parameters ')' ':' . return_type '{' function_body '}'  (11)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	VOID  shift 50
	.  error

	return_type  goto 51
	simple_type  goto 52


state 48
	_parameters : _parameters ',' parameter .  (15)

	.  reduce 15


state 49
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' . function_body '}'  (6)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 19

	variable_definition  goto 65
	function_body  goto 66
	variables  goto 8
	variable_definitions  goto 67
	statements  goto 68
	statement  goto 69
	statement_without_semicolon  goto 70
	while  goto 71
	if  goto 72
	function_call_as_expression  goto 73
	return  goto 74
	assignment  goto 75
	read  goto 76
	write  goto 77
	expression  goto 78


state 50
	return_type : VOID .  (18)

	.  reduce 18


state 51
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type . '{' function_body '}'  (11)

	'{'  shift 79
	.  error


state 52
	return_type : simple_type .  (17)

	.  reduce 17


state 53
	expression : INT_CONSTANT .  (81)

	.  reduce 81


state 54
	expression : REAL_CONSTANT .  (82)

	.  reduce 82


state 55
	expression : CHAR_CONSTANT .  (83)

	.  reduce 83


state 56
	read : INPUT . expressions  (46)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 82
	expressions  goto 83


state 57
	write : PRINT . $$3 expressions  (48)
	$$3 : .  (47)

	.  reduce 47

	$$3  goto 84


state 58
	while : WHILE . expression ':' '{' statements '}'  (51)
	while : WHILE . expression ':' statement  (52)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 85


state 59
	if : IF . expression ':' '{' statements '}'  (53)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (54)
	if : IF . expression ':' '{' statements '}' ELSE statement  (55)
	if : IF . expression ':' statement  (56)
	if : IF . expression ':' statement ELSE '{' statements '}'  (57)
	if : IF . expression ':' statement ELSE statement  (58)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 86


state 60
	return : RETURN . $$4 expression  (60)
	$$4 : .  (59)

	.  reduce 59

	$$4  goto 87


state 61
	variables : ID .  (8)
	expression : ID .  (84)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (85)

	'('  shift 88
	'='  reduce 84
	AND  reduce 84
	OR  reduce 84
	'>'  reduce 84
	GREATER_OR_EQUAL  reduce 84
	'<'  reduce 84
	LESS_OR_EQUAL  reduce 84
	DISTINCT  reduce 84
	EQUALS  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'.'  reduce 84
	'['  reduce 84
	':'  reduce 8
	','  reduce 8


state 62
	expression : '-' . expression  (75)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 89


state 63
	expression : '!' . expression  (74)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 90


state 64
	expression : '(' . simple_type ')' expression  (76)
	expression : '(' . expression ')'  (79)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	simple_type  goto 91
	function_call_as_expression  goto 81
	expression  goto 92


state 65
	variable_definitions : variable_definition .  (23)

	.  reduce 23


state 66
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body . '}'  (6)

	'}'  shift 93
	.  error


state 67
	function_body : variable_definitions . statements  (20)
	function_body : variable_definitions .  (21)
	variable_definitions : variable_definitions . variable_definition  (24)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 21

	variable_definition  goto 94
	variables  goto 8
	statements  goto 95
	statement  goto 69
	statement_without_semicolon  goto 70
	while  goto 71
	if  goto 72
	function_call_as_expression  goto 73
	return  goto 74
	assignment  goto 75
	read  goto 76
	write  goto 77
	expression  goto 78


state 68
	function_body : statements .  (22)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 22

	statement  goto 96
	statement_without_semicolon  goto 70
	while  goto 71
	if  goto 72
	function_call_as_expression  goto 73
	return  goto 74
	assignment  goto 75
	read  goto 76
	write  goto 77
	expression  goto 78


state 69
	statements : statement .  (25)

	.  reduce 25


state 70
	statement : statement_without_semicolon . ';'  (27)

	';'  shift 97
	.  error


state 71
	statement : while .  (28)

	.  reduce 28


state 72
	statement : if .  (29)

	.  reduce 29


state 73
	statement_without_semicolon : function_call_as_expression .  (30)
	expression : function_call_as_expression .  (80)

	'='  reduce 80
	AND  reduce 80
	OR  reduce 80
	'>'  reduce 80
	GREATER_OR_EQUAL  reduce 80
	'<'  reduce 80
	LESS_OR_EQUAL  reduce 80
	DISTINCT  reduce 80
	EQUALS  reduce 80
	'+'  reduce 80
	'-'  reduce 80
	'*'  reduce 80
	'/'  reduce 80
	'%'  reduce 80
	'.'  reduce 80
	'['  reduce 80
	';'  reduce 30


state 74
	statement_without_semicolon : return .  (31)

	.  reduce 31


state 75
	statement_without_semicolon : assignment .  (32)

	.  reduce 32


state 76
	statement_without_semicolon : read .  (33)

	.  reduce 33


state 77
	statement_without_semicolon : write .  (34)

	.  reduce 34


state 78
	assignment : expression . '=' expression  (45)
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	'='  shift 98
	AND  shift 99
	OR  shift 100
	'>'  shift 101
	GREATER_OR_EQUAL  shift 102
	'<'  shift 103
	LESS_OR_EQUAL  shift 104
	DISTINCT  shift 105
	EQUALS  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'.'  shift 112
	'['  shift 113
	.  error


state 79
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' . function_body '}'  (11)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 19

	variable_definition  goto 65
	function_body  goto 114
	variables  goto 8
	variable_definitions  goto 67
	statements  goto 68
	statement  goto 69
	statement_without_semicolon  goto 70
	while  goto 71
	if  goto 72
	function_call_as_expression  goto 73
	return  goto 74
	assignment  goto 75
	read  goto 76
	write  goto 77
	expression  goto 78


state 80
	expression : ID .  (84)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (85)

	'('  shift 88
	'='  reduce 84
	AND  reduce 84
	OR  reduce 84
	'>'  reduce 84
	GREATER_OR_EQUAL  reduce 84
	'<'  reduce 84
	LESS_OR_EQUAL  reduce 84
	DISTINCT  reduce 84
	EQUALS  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'.'  reduce 84
	'['  reduce 84
	']'  reduce 84
	')'  reduce 84
	':'  reduce 84
	';'  reduce 84
	','  reduce 84


state 81
	expression : function_call_as_expression .  (80)

	.  reduce 80


state 82
	expressions : expression .  (49)
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	AND  shift 99
	OR  shift 100
	'>'  shift 101
	GREATER_OR_EQUAL  shift 102
	'<'  shift 103
	LESS_OR_EQUAL  shift 104
	DISTINCT  shift 105
	EQUALS  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'.'  shift 112
	'['  shift 113
	')'  reduce 49
	';'  reduce 49
	','  reduce 49


state 83
	read : INPUT expressions .  (46)
	expressions : expressions . ',' expression  (50)

	','  shift 115
	';'  reduce 46


state 84
	write : PRINT $$3 . expressions  (48)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 82
	expressions  goto 116


state 85
	while : WHILE expression . ':' '{' statements '}'  (51)
	while : WHILE expression . ':' statement  (52)
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	AND  shift 99
	OR  shift 100
	'>'  shift 101
	GREATER_OR_EQUAL  shift 102
	'<'  shift 103
	LESS_OR_EQUAL  shift 104
	DISTINCT  shift 105
	EQUALS  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'.'  shift 112
	'['  shift 113
	':'  shift 117
	.  error


state 86
	if : IF expression . ':' '{' statements '}'  (53)
	if : IF expression . ':' '{' statements '}' ELSE '{' statements '}'  (54)
	if : IF expression . ':' '{' statements '}' ELSE statement  (55)
	if : IF expression . ':' statement  (56)
	if : IF expression . ':' statement ELSE '{' statements '}'  (57)
	if : IF expression . ':' statement ELSE statement  (58)
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	AND  shift 99
	OR  shift 100
	'>'  shift 101
	GREATER_OR_EQUAL  shift 102
	'<'  shift 103
	LESS_OR_EQUAL  shift 104
	DISTINCT  shift 105
	EQUALS  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'.'  shift 112
	'['  shift 113
	':'  shift 118
	.  error


state 87
	return : RETURN $$4 . expression  (60)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 119


state 88
	function_call_as_expression : ID '(' . parameters_in_function_call ')'  (85)
	parameters_in_function_call : .  (86)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	')'  reduce 86

	function_call_as_expression  goto 81
	expression  goto 82
	expressions  goto 120
	parameters_in_function_call  goto 121


state 89
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : '-' expression .  (75)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	'.'  shift 112
	'['  shift 113
	'='  reduce 75
	AND  reduce 75
	OR  reduce 75
	'>'  reduce 75
	GREATER_OR_EQUAL  reduce 75
	'<'  reduce 75
	LESS_OR_EQUAL  reduce 75
	DISTINCT  reduce 75
	EQUALS  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	']'  reduce 75
	')'  reduce 75
	':'  reduce 75
	';'  reduce 75
	','  reduce 75


state 90
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : '!' expression .  (74)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)

	'.'  shift 112
	'['  shift 113
	'='  reduce 74
	AND  reduce 74
	OR  reduce 74
	'>'  reduce 74
	GREATER_OR_EQUAL  reduce 74
	'<'  reduce 74
	LESS_OR_EQUAL  reduce 74
	DISTINCT  reduce 74
	EQUALS  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	']'  reduce 74
	')'  reduce 74
	':'  reduce 74
	';'  reduce 74
	','  reduce 74


state 91
	expression : '(' simple_type . ')' expression  (76)

	')'  shift 122
	.  error


state 92
	expression : expression . AND expression  (61)
	expression : expression . OR expression  (62)
	expression : expression . '>' expression  (63)
	expression : expression . GREATER_OR_EQUAL expression  (64)
	expression : expression . '<' expression  (65)
	expression : expression . LESS_OR_EQUAL expression  (66)
	expression : expression . DISTINCT expression  (67)
	expression : expression . EQUALS expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '*' expression  (71)
	expression : expression . '/' expression  (72)
	expression : expression . '%' expression  (73)
	expression : expression . '.' ID  (77)
	expression : expression . '[' expression ']'  (78)
	expression : '(' expression . ')'  (79)

	AND  shift 99
	OR  shift 100
	'>'  shift 101
	GREATER_OR_EQUAL  shift 102
	'<'  shift 103
	LESS_OR_EQUAL  shift 104
	DISTINCT  shift 105
	EQUALS  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'.'  shift 112
	'['  shift 113
	')'  shift 123
	.  error


state 93
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}' .  (6)

	.  reduce 6


state 94
	variable_definitions : variable_definitions variable_definition .  (24)

	.  reduce 24


state 95
	function_body : variable_definitions statements .  (20)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 20

	statement  goto 96
	statement_without_semicolon  goto 70
	while  goto 71
	if  goto 72
	function_call_as_expression  goto 73
	return  goto 74
	assignment  goto 75
	read  goto 76
	write  goto 77
	expression  goto 78


state 96
	statements : statements statement .  (26)

	.  reduce 26


state 97
	statement : statement_without_semicolon ';' .  (27)

	.  reduce 27


state 98
	assignment : expression '=' . expression  (45)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 124


state 99
	expression : expression AND . expression  (61)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 125


state 100
	expression : expression OR . expression  (62)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 126


state 101
	expression : expression '>' . expression  (63)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 127


state 102
	expression : expression GREATER_OR_EQUAL . expression  (64)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 128


state 103
	expression : expression '<' . expression  (65)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 129


state 104
	expression : expression LESS_OR_EQUAL . expression  (66)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 130


state 105
	expression : expression DISTINCT . expression  (67)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 131


state 106
	expression : expression EQUALS . expression  (68)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 132


state 107
	expression : expression '+' . expression  (69)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 133


state 108
	expression : expression '-' . expression  (70)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 134


state 109
	expression : expression '*' . expression  (71)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 135


state 110
	expression : expression '/' . expression  (72)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 136


state 111
	expression : expression '%' . expression  (73)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 137


state 112
	expression : expression '.' . ID  (77)

	ID  shift 138
	.  error


state 113
	expression : expression '[' . expression ']'  (78)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	function_call_as_expression  goto 81
	expression  goto 139


state 114
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body . '}'  (11)

	'}'  shift 140
	.  error


state 115
	expressions : expressions ',' . expression  (50)
